Fix spacing for h1 name section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ h1 {
 	font-weight: 700;
 	color: rgb(207, 75, 86);
 	line-height: 1.5;
+	padding-top: 100px;
 }
 
 h2 {
